# mcp-posthog

./: .gitignore  .release-please-config.json  .release-please-manifest.json  CLAUDE.md  Dockerfile  README.md  package.json  pnpm-lock.yaml  server.js  worker-configuration.d.ts  wrangler.jsonc
.github/workflows/: ci-python.yml  ci-typescript.yml  publish.yml  release-python.yml
.husky/: pre-commit
examples/ai-sdk/: .env.example  README.md  package-lock.json  package.json
examples/ai-sdk/src/: index.ts
examples/langchain/: README.md  posthog_agent_example.py  pyproject.toml
examples/langchain-js/: README.md  package-lock.json  package.json
examples/langchain-js/src/: index.ts
python/: README.md  pyproject.toml
python/schema/: tool_inputs.py
schema/: tool-definitions.json  tool-inputs.json
typescript/: README.md  package.json  pnpm-lock.yaml  tsup.config.ts
typescript/src/: index.ts
typescript/src/api/: client.ts
typescript/src/lib/: analytics.ts  constants.ts
typescript/src/schema/: api.ts  dashboards.ts  experiments.ts  flags.ts  insights.ts  query.ts  tool-inputs.ts
typescript/src/tools/: README.md  index.ts  toolDefinitions.ts  types.ts
typescript/tests/api/: client.integration.test.ts
typescript/tests/integration/: feature-routing.test.ts
typescript/tests/shared/: test-utils.ts
typescript/tests/tools/: insights.integration.test.ts  llmAnalytics.integration.test.ts  organizations.integration.test.ts  projects.integration.test.ts  query.integration.test.ts
typescript/tests/unit/: tool-filtering.test.ts
(+42 files in other folders)
